--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "me.fernandesleite.exonpodcast"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
